[package]
name = "master"
version = "0.1.0"
description = "A fast and correct web application security proxy"
readme = "README.md"
homepage = "https://sectcs.com"
documentation = "https://sectcs.com"
repository = "https://github.com/aayush420/master"
license = "MIT"
authors = ["Balakrishna Prasad Ganne <balkripra.1996@gmail.com>"]
keywords = ["http","security","rust","master","proxy"]
categories = ["network-programming","web application security","brute force"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
